--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <footer class="site-footer">
       <div class="footer-content">
         <p>&copy; 2025 Bandits999. All rights reserved.</p>
-        <p> Made with <span style="color:#e1306c;">&#10084;</span> by Bandits999. <br> Contact: <a href="mailto:bandits999@proton.me">Bandits999</a>
+        <p> Made with <span style="color:#e1306c;">&#10084;</span> by Bandits999. <br> Contact: bandits999@proton.me
         </p>
       </div>
     </footer>
