--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img class="avatar" src="img/Bandits-600.jpg" alt="Bandits999 Avatar">
                 <h4>Facebook</h4>
                 <p>Follow us on Facebook for updates, news, and events.</p>
-                <button class="follow-btn" data-link="https://www.facebook.com/999Bandits">Follow</button>
+                <button class="follow-btn" data-link="https://www.facebook.com/">Follow</button>
               </div>
             </div>
           </div>
@@ -55,7 +55,7 @@
                 <img class="avatar" src="img/Bandits-600.jpg" alt="Bandits999 Avatar">
                 <h4>Instagram</h4>
                 <p>Catch behind-the-scenes and lifestyle content on IG.</p>
-                <button class="follow-btn" data-link="https://instagram.com/999bandits">Follow</button>
+                <button class="follow-btn" data-link="https://instagram.com/">Follow</button>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
                 <img class="avatar" src="img/Bandits-600.jpg" alt="Bandits999 Avatar">
                 <h4>GitHub</h4>
                 <p>Check out our open-source projects and repos.</p>
-                <button class="follow-btn" data-link="https://github.com/MrBroowc">Star</button>
+                <button class="follow-btn" data-link="https://github.com/Bandits999">Star</button>
               </div>
             </div>
           </div>
@@ -179,3 +179,4 @@
     </script>
   </body>
 </html>
+
