--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bandits999 - Official Website</title>
+    <meta name="description" content="Bandits999 Official Website. Follow us on social media, watch our videos, and join our community!">
+    <meta name="keywords" content="Bandits999, Bandits99, official, social media, YouTube, Instagram, TikTok, GitHub, Telegram">
+    <meta name="author" content="Bandits999 Team">
+    <meta property="og:title" content="Bandits999 - Official Website">
+    <meta property="og:description" content="Follow Bandits999 on all platforms. Join our community!">
+    <meta property="og:image" content="https://bandits999.vercel.app/img/Bandits-Banner.jpg">
+    <meta property="og:url" content="https://bandits999.vercel.app/">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="https://bandits999.vercel.app/" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="icon" href="https://bandits999.vercel.app/img/Bandits-600.png" type="image/png">
     <link href="https://fonts.cdnfonts.com/css/noto-serif-jp" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sawarabi-gothic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
