--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Bandits999 Team">
     <meta property="og:title" content="Bandits999 - Official Website">
     <meta property="og:description" content="Follow Bandits999 on all platforms. Join our community!">
-    <meta property="og:image" content="https://bandits999.vercel.app/img/Bandits-Banner.jpg">
+    <meta property="og:image" content="img/banner.jpg">
     <meta property="og:url" content="https://bandits999.vercel.app/">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="canonical" href="https://bandits999.vercel.app/" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link rel="icon" href="https://bandits999.vercel.app/img/Bandits-600.png" type="image/png">
+    <link rel="icon" href="img/staywme.gif" type="image/png">
     <link href="https://fonts.cdnfonts.com/css/noto-serif-jp" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sawarabi-gothic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
